--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description"
     content="Substantia - Platforma z ekskluzywnymi treściami. Dołącz do naszej społeczności, aby odkrywać inspirujące materiały tworzone przez najlepszych twórców. Ekskluzywny dostęp tylko dla subskrybentów!" />
+  <script src="https://accounts.google.com/gsi/client" async defer></script>
   <title>Substantia</title>
 </head>
 
